# rhombus

./: .gitattributes  Cargo.toml  Taskfile.yaml  flake.nix
rhombus-cli/: Cargo.toml  rhombusapi.json
rhombus-cli/rhombus-api-client/: .openapi-generator-ignore  Cargo.toml
rhombus-cli/rhombus-api-client/.openapi-generator/: FILES
rhombus-cli/rhombus-api-client/docs/: DefaultApi.md
rhombus-cli/rhombus-api-client/src/apis/: configuration.rs  default_api.rs
rhombus-cli/rhombus-api-client/src/models/: author.rs  author_patch.rs  category.rs  category_patch.rs  challenge.rs  challenge_attachment.rs  challenge_data.rs  challenge_data_patch.rs  challenge_data_patch_action.rs  challenge_data_patch_action_one_of.rs  challenge_data_patch_action_one_of_1.rs  challenge_data_patch_action_one_of_2.rs  challenge_data_patch_action_one_of_3.rs  challenge_data_patch_action_one_of_4.rs  challenge_data_patch_action_one_of_5.rs  challenge_data_patch_action_one_of_6.rs  challenge_data_patch_action_one_of_7.rs  challenge_data_patch_action_one_of_8.rs  challenge_patch.rs  get_attachment_params.rs  get_attachment_result.rs  get_attachment_result_one_of.rs  get_attachment_result_one_of_1.rs  get_attachment_result_one_of_exists.rs  mod.rs  patch_for_array_of_challenge_attachment.rs  patch_for_non_zero_u64.rs  patch_for_nullable_string.rs  patch_for_string.rs
rhombus-cli/rhombusapi/: Cargo.toml  README.md
rhombus-cli/rhombusapi/.openapi-generator/: FILES
rhombus-cli/rhombusapi/docs/: Challenge.md  ChallengeAttachment.md
rhombus-cli/src/: main.rs
rhombus-cli/src/admin/: mod.rs
(+28 files in other folders)
