[package]
name = "rhombus-cli"
version = "0.1.0"
edition = "2021"
description = "Official CLI tool to interact with the Rhombus CTF framework."
authors = ["Mark Bundschuh <mark@mbund.dev>"]
license = "MPL-2.0"
repository = "https://github.com/rhombusgg/rhombus"
homepage = "https://rhombus.gg"
keywords = ["ctf", "cli"]

[dependencies]
anyhow = "1.0.91"
clap = { version = "4.5.17", features = ["derive"] }
config = "0.14.0"
rhombus-api-client = { path = "./rhombus-api-client" }
serde = { version = "1.0.210", features = ["derive"] }
thiserror = "1.0.64"
tokio = { version = "1.40.0", features = ["macros", "rt-multi-thread"] }
